2010-10-29  Glenn Morris  <rgm@gnu.org>

	* speedbar.el (speedbar-mode):
	* play/fortune.el (fortune-in-buffer, fortune):
	* play/gomoku.el (gomoku-mode):
	* play/landmark.el (lm-mode):
	* textmodes/bibtex.el (bibtex-validate, bibtex-validate-globally):
	Replace inappropriate uses of toggle-read-only.  (Bug#7292)

2010-10-28  Glenn Morris  <rgm@gnu.org>

	* select.el (x-selection): Mark it as an obsolete alias.

2010-10-27  Aaron S. Hawley  <aaron.s.hawley@gmail.com>

	* add-log.el (find-change-log): Use derived-mode-p rather than
	major-mode (bug#7284).

2010-10-27  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-files-menu): Make it into an actual alias,
	rather than just an unused variable that inherits from the real one.

2010-10-23  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-directive-re): Make this variable
	auto-built for efficiency of execution and updating.
	(verilog-extended-complete-re): Support 'pure' fucntion & task
	declarations (these have no bodies).
	(verilog-beg-of-statement): General cleanup to enable support of
	'pure' fucntion & task declarations (these have no bodies).
	These efforts together fix Verilog bug210 from veripool; which was also
	noticed by Steve Pearlmutter.
	(verilog-directive-re, verilog-directive-begin, verilog-indent-re)
	(verilog-directive-nest-re, verilog-set-auto-endcomments):
	Support `elsif.  Reported by Shankar Giri.
	(verilog-forward-ws&directives, verilog-in-attribute-p): Fixes for
	attribute handling for lining up declarations and assignments.
	(verilog-beg-of-statement-1): Fix issue where continued declaration
	is indented differently if it is after a begin..end clock.
	(verilog-in-attribute-p, verilog-skip-backward-comments)
	(verilog-skip-forward-comment-p): Support proper treatment of
	attributes by indent code. Reported by Jeff Steele.
	(verilog-in-directive-p): Fix comment to correctly describe function.
	(verilog-backward-up-list, verilog-in-struct-region-p)